# Computer-Graphics-Class-files

./: README.md
Lab Files/: Bresenham_Line.cpp  DDA.cpp  Direct_Equation.cpp  Mid-Point.cpp
Lab Files /: Direct_Equation.cpp
opengl_game/: CMakeLists.txt  main.cpp
